[gd_scene load_steps=4 format=3 uid="uid://i3yri6j7tevs"]

[ext_resource type="Theme" uid="uid://bcyw1gta702yl" path="res://Visuals/GUI-s/main_menu.tres" id="1_krdvl"]
[ext_resource type="Script" uid="uid://d11i75umpxb4n" path="res://Scripts/GUI-code/main_menu.gd" id="1_oj8pa"]
[ext_resource type="Texture2D" uid="uid://3urf313bb182" path="res://Visuals/Images/Menu.png" id="3_gskec"]

[node name="Main_Menu" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme = ExtResource("1_krdvl")
script = ExtResource("1_oj8pa")

[node name="MarginContainer" type="MarginContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_left = 100
theme_override_constants/margin_top = 100
theme_override_constants/margin_right = 100
theme_override_constants/margin_bottom = 100

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer"]
layout_mode = 2
theme_override_constants/separation = 17

[node name="Play_Button" type="Button" parent="MarginContainer/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
text = "PLAY"

[node name="Character_Creator_Button" type="Button" parent="MarginContainer/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
text = "Character Creator"

[node name="Dungeon_Creator_Button" type="Button" parent="MarginContainer/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
text = "Dungeon Creator
"

[node name="Lang_Button" type="Button" parent="MarginContainer/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
text = "LANGUAGE:"

[node name="Exit_Button" type="Button" parent="MarginContainer/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_vertical = 10
text = "EXIT"

[node name="Menu" type="Sprite2D" parent="MarginContainer"]
unique_name_in_owner = true
modulate = Color(1, 1, 1, 0.839216)
z_index = -4
position = Vector2(600, 311)
texture = ExtResource("3_gskec")

[connection signal="pressed" from="MarginContainer/VBoxContainer/Play_Button" to="." method="_on_play_button_pressed"]
[connection signal="pressed" from="MarginContainer/VBoxContainer/Character_Creator_Button" to="." method="_on_character_creator_button_pressed"]
[connection signal="pressed" from="MarginContainer/VBoxContainer/Dungeon_Creator_Button" to="." method="_on_dungeon_creator_button_pressed"]
[connection signal="pressed" from="MarginContainer/VBoxContainer/Lang_Button" to="." method="_on_lang_button_pressed"]
[connection signal="pressed" from="MarginContainer/VBoxContainer/Exit_Button" to="." method="_on_exit_button_pressed"]
